--- a/app/views/spina/admin/events/conferences/_form_conference_configuration.html.haml
+++ b/app/views/spina/admin/events/conferences/_form_conference_configuration.html.haml
@@ -3,14 +3,14 @@
 
     .horizontal-form-group
       .horizontal-form-label
-        = Spina::Events::Conference.human_attribute_name :draft
+        = Spina::Events::Conference.human_attribute_name(:draft)
         %small= Spina::Events::Conference.human_attribute_name :draft_description
       .horizontal-form-content
         = f.check_box :draft, data: {switch: true}
 
     .horizontal-form-group
       .horizontal-form-label
-        = Spina::Events::Conference.human_attribute_name :slug
+        = Spina::Events::Conference.human_attribute_name(:slug)
         %small= Spina::Events::Conference.human_attribute_name :slug_description
       .horizontal-form-content
         = f.text_field :slug, placeholder: Spina::Events::Conference.human_attribute_name(:slug_placeholder)
@@ -18,3 +18,15 @@
           %small
             Current permalink:
             \ /events/conferences/#{@conference.slug}
+
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Conference.human_attribute_name(:conference_contact)
+      .horizontal-form-content
+        = render 'spina/admin/shared/rich_text_field', f: f, field: :conference_contact
+
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Conference.human_attribute_name(:sponsorship_info)
+      .horizontal-form-content
+        = render 'spina/admin/shared/rich_text_field', f: f, field: :sponsorship_info
