--- a/app/views/spina/admin/hooks/events/_primary_navigation.html.haml
+++ b/app/views/spina/admin/hooks/events/_primary_navigation.html.haml
@@ -8,3 +8,5 @@
       = link_to t('spina.events.conferences.title'), admin_events_conferences_path
     %li{class: ('active' if current_admin_path.start_with?('/events/organisations'))}
       = link_to t('spina.events.organisations.title'), admin_events_organisations_path
+    %li{class: ('active' if current_admin_path.start_with?('/events/venues'))}
+      = link_to t('spina.events.venues.title'), admin_events_venues_path
