--- a/app/views/spina/admin/hooks/events/_primary_navigation.html.haml
+++ b/app/views/spina/admin/hooks/events/_primary_navigation.html.haml
@@ -1,12 +1,12 @@
 %li{class: ('active' if (current_admin_path.start_with?('/events')))}
-  = link_to admin_events_conferences_path do
+  = link_to spina.events_admin_conferences_path do
     = icon 'comment'
     = t('spina.events.title')
     = icon 'caret-right'
   %ul
     %li{class: ('active' if current_admin_path.start_with?('/events/conferences'))}
-      = link_to t('spina.events.conferences.title'), admin_events_conferences_path
+      = link_to t('spina.events.conferences.title'), spina.events_admin_conferences_path
     %li{class: ('active' if current_admin_path.start_with?('/events/organisations'))}
-      = link_to t('spina.events.organisations.title'), admin_events_organisations_path
+      = link_to t('spina.events.organisations.title'), spina.events_admin_organisations_path
     %li{class: ('active' if current_admin_path.start_with?('/events/venues'))}
-      = link_to t('spina.events.venues.title'), admin_events_venues_path
+      = link_to t('spina.events.venues.title'), spina.events_admin_venues_path
