--- a/app/views/spina/events/admin/conferences/new.html.haml
+++ b/app/views/spina/events/admin/conferences/new.html.haml
@@ -1,2 +1,2 @@
-= form_for [spina, :admin, :events, @conference], html: {id: 'conference_form', autocomplete: "off"} do |f|
+= form_for [spina, :events, :admin, @conference], html: {id: 'conference_form', autocomplete: "off"} do |f|
   = render 'form', f: f
