--- a/app/views/spina/events/admin/venues/edit.html.haml
+++ b/app/views/spina/events/admin/venues/edit.html.haml
@@ -1,2 +1,2 @@
-= form_for [spina, :admin, :events, @venue], url: spina.events_admin_venue_path(@venue.id), html: {id: 'venue_form', autocomplete: "off"} do |f|
+= form_for [spina, :events, :admin, @venue], url: spina.events_admin_venue_path(@venue.id), html: {id: 'venue_form', autocomplete: "off"} do |f|
   = render 'form', f: f
