--- a/app/views/spina/events/admin/conferences/_form_conference_content.html.haml
+++ b/app/views/spina/events/admin/conferences/_form_conference_content.html.haml
@@ -34,15 +34,13 @@
       .horizontal-form-label
         = Spina::Events::Conference.human_attribute_name(:speakers)
       .horizontal-form-content
-        .select-dropdown
-          = f.select :speaker_ids, Spina::Events::Speaker.all.collect{ |speaker| [speaker.name, speaker.id] }, { prompt: "Please select"}, { multiple: true }
+        = f.select :speaker_ids, options_for_select(Spina::Events::Speaker.pluck(:name, :id), f.object.speaker_ids), {}, class: 'select2', multiple: true, style: 'width: 100%'
 
     .horizontal-form-group
       .horizontal-form-label
         = Spina::Events::Conference.human_attribute_name(:venue)
       .horizontal-form-content
-        .select-dropdown
-          = f.select :venue_id, Spina::Events::Venue.all.collect{ |venue| [venue.name, venue.id] }, { prompt: "Please select"}
+        = f.select :venue_id, options_for_select(Spina::Events::Venue.pluck(:name, :id), f.object.venue_id), {}, class: 'select2', style: 'width: 100%'
 
     .horizontal-form-group
       .horizontal-form-label
