--- a/app/views/spina/events/admin/conferences/_form_conference_content.html.haml
+++ b/app/views/spina/events/admin/conferences/_form_conference_content.html.haml
@@ -8,6 +8,22 @@
 
     .horizontal-form-group
       .horizontal-form-label
+        = Spina::Events::Conference.human_attribute_name(:photo)
+      .horizontal-form-content
+        = link_to spina.photo_select_admin_photos_path(f.object_name, selected_photo_id: f.object.try(:photo_id), hidden_field_id: 'photo_id'), remote: true, class: 'media_picker clearfix' do
+          .placeholder
+            %span.button.button-small.button-round
+              %i.icon.icon-dots
+              =t 'spina.pages.photo_picker'
+
+          - if f.object.photo && f.object.photo.file.present?
+            .image
+              = image_tag f.object.photo.file.thumb
+
+          = f.hidden_field :photo_id, data: { hidden_field_id: 'photo_id' }
+
+    .horizontal-form-group
+      .horizontal-form-label
         = Spina::Events::Conference.human_attribute_name(:description)
       .horizontal-form-content
         = render 'spina/admin/shared/rich_text_field', f: f, field: :description
@@ -32,12 +48,6 @@
 
     .horizontal-form-group
       .horizontal-form-label
-        = Spina::Events::Conference.human_attribute_name(:speakers)
-      .horizontal-form-content
-        = f.select :speaker_ids, options_for_select(Spina::Events::Speaker.pluck(:name, :id), f.object.speaker_ids), {}, class: 'select2', multiple: true, style: 'width: 100%'
-
-    .horizontal-form-group
-      .horizontal-form-label
         = Spina::Events::Conference.human_attribute_name(:venue)
       .horizontal-form-content
         = f.select :venue_id, options_for_select(Spina::Events::Venue.pluck(:name, :id), f.object.venue_id), {}, class: 'select2', style: 'width: 100%'
@@ -47,22 +57,6 @@
         = Spina::Events::Conference.human_attribute_name(:attendees)
       .horizontal-form-content
         = f.select :attendee_ids, options_for_select(Spina::Events::Organisation.pluck(:name, :id), f.object.attendee_ids), {}, class: 'select2', multiple: true, style: 'width: 100%'
-
-    .horizontal-form-group
-      .horizontal-form-label
-        = Spina::Events::Conference.human_attribute_name(:photo)
-      .horizontal-form-content
-        = link_to spina.photo_select_admin_photos_path(f.object_name, selected_photo_id: f.object.try(:photo_id), hidden_field_id: 'photo_id'), remote: true, class: 'media_picker clearfix' do
-          .placeholder
-            %span.button.button-small.button-round
-              %i.icon.icon-dots
-              =t 'spina.pages.photo_picker'
-
-          - if f.object.photo && f.object.photo.file.present?
-            .image
-              = image_tag f.object.photo.file.thumb
-
-          = f.hidden_field :photo_id, data: { hidden_field_id: 'photo_id' }
 
     .horizontal-form-group
       .horizontal-form-label
@@ -78,3 +72,16 @@
             .attachment= f.object.attachment.name
 
           = f.hidden_field :attachment_id, data: { hidden_field_id: 'attachment_id' }
+
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Conference.human_attribute_name(:conference_contact)
+      .horizontal-form-content
+        = render 'spina/admin/shared/rich_text_field', f: f, field: :conference_contact
+
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Conference.human_attribute_name(:sponsorship_info)
+      .horizontal-form-content
+        = render 'spina/admin/shared/rich_text_field', f: f, field: :sponsorship_info
+
