Show correct slug for conferences in CMS

--- a/app/views/spina/events/admin/conferences/_form_conference_configuration.html.haml
+++ b/app/views/spina/events/admin/conferences/_form_conference_configuration.html.haml
@@ -17,4 +17,4 @@
         - if @conference.slug
           %small
             Current permalink:
-            \ /events/conferences/#{@conference.slug}
+            \ /conferences/#{@conference.slug}
