--- a/app/views/spina/events/admin/conferences/_form_conference_content.html.haml
+++ b/app/views/spina/events/admin/conferences/_form_conference_content.html.haml
@@ -4,7 +4,13 @@
       .horizontal-form-label
         = Spina::Events::Conference.human_attribute_name(:title)
       .horizontal-form-content
-        = f.text_field :title, placeholder: Spina::Events::Conference.human_attribute_name(:title_placeholder)
+        = f.text_field :title
+
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Conference.human_attribute_name(:sub_title)
+      .horizontal-form-content
+        = f.text_field :sub_title
 
     .horizontal-form-group
       .horizontal-form-label
