--- a/app/views/spina/admin/hooks/events/_primary_navigation.html.haml
+++ b/app/views/spina/admin/hooks/events/_primary_navigation.html.haml
@@ -12,3 +12,4 @@
       = link_to t('spina.events.venues.title'), spina.events_admin_venues_path
     %li{class: ('active' if current_admin_path.start_with?('/events/speakers'))}
       = link_to t('spina.events.speakers.title'), spina.events_admin_speakers_path
+    %li= link_to t('spina.events.sessions.title'), "#hahaha"
