--- a/app/views/spina/events/admin/conferences/_session_fields.html.haml
+++ b/app/views/spina/events/admin/conferences/_session_fields.html.haml
@@ -2,16 +2,26 @@
   .horizontal-form
     .horizontal-form-group
       .horizontal-form-label
-        = Spina::Events::Conference.human_attribute_name(:sessions)
-    -#   .horizontal-form-content
-    -#     = f.text_field :sponsor_type
-    -# .horizontal-form-group
-    -#   .horizontal-form-label
-    -#     = Spina::Events::Conference.human_attribute_name(:organisation)
-    -#   .horizontal-form-content
-    -#     = f.select :organisation_id, options_for_select(Spina::Events::Organisation.pluck(:name, :id), f.object.organisation_id), {}, class: 'select2', style: 'width: 100%'
-    -# .horizontal-form-group
-    -#   .horizontal-form-label
-    -#     = t('spina.delete')
-    -#   .horizontal-form-content
-    -#     = f.check_box :_destroy, data: { switch: true }
+        = Spina::Events::Session.human_attribute_name(:title)
+      .horizontal-form-content
+        = f.text_field :title
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Session.human_attribute_name(:description)
+      .horizontal-form-content
+        = f.text_area :description
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Session.human_attribute_name(:duration_minutes)
+      .horizontal-form-content
+        = f.number_field :duration_minutes
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Session.human_attribute_name(:position)
+      .horizontal-form-content
+        = f.number_field :position
+    .horizontal-form-group
+      .horizontal-form-label
+        = t('spina.delete')
+      .horizontal-form-content
+        = f.check_box :_destroy, data: { switch: true }
