Cleanup code for adding session on conference view

--- a/app/views/spina/events/admin/conferences/_form.html.haml
+++ b/app/views/spina/events/admin/conferences/_form.html.haml
@@ -41,6 +41,7 @@
 
 - Mobility.with_locale(@locale) do
   - @tabs.each do |tab|
+    - next if tab.include?('conference_session')
     = render "spina/events/admin/conferences/form_#{tab}", f: f
 
 - unless @conference.new_record?
