--- a/app/views/spina/events/admin/conferences/_form.html.haml
+++ b/app/views/spina/events/admin/conferences/_form.html.haml
@@ -34,6 +34,9 @@
           - if tab.include?('conference_sessions')
             - if @conference.persisted?
               = link_to t("spina.events.conferences.#{tab}"), spina.events_admin_conference_sessions_path(conference_id: @conference.id)
+          - elsif tab.include?('speakers')
+            - if @conference.persisted?
+              = link_to t("spina.events.conferences.#{tab}"), spina.events_admin_conference_speakers_path(conference_id: @conference.id)
           - else
             = link_to t("spina.events.conferences.#{tab}"), "##{tab}"
 
