--- a/app/views/spina/events/admin/conferences/_ticket_fields.html.haml
+++ b/app/views/spina/events/admin/conferences/_ticket_fields.html.haml
@@ -22,6 +22,16 @@
         = f.text_field :price
     .horizontal-form-group
       .horizontal-form-label
+        = Spina::Events::Ticket.human_attribute_name(:early_bird_price)
+      .horizontal-form-content
+        = f.text_field :early_bird_price
+    .horizontal-form-group
+      .horizontal-form-label
+        = Spina::Events::Ticket.human_attribute_name(:current_price)
+      .horizontal-form-content
+        = f.text_field :current_price
+    .horizontal-form-group
+      .horizontal-form-label
         = Spina::Events::Ticket.human_attribute_name(:position)
       .horizontal-form-content
         = f.number_field :position
