--- a/app/views/spina/events/admin/conference/speakers/index.html.haml
+++ b/app/views/spina/events/admin/conference/speakers/index.html.haml
@@ -2,7 +2,7 @@
   .breadcrumbs= render_breadcrumbs seperator: '<div class="divider"></div>'
   #header_actions
     %span
-      = link_to spina.edit_events_admin_conference_speaker_path(id:@conference.id), class: 'button button-primary' do
+      = link_to spina.events_admin_conference_edit_admin_conference_speaker_path, class: 'button button-primary' do
         = icon('plus')
         = t('spina.events.speakers.add')
 
